--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,15 @@
   color: #61dafb;
 }
 
+.calendar {
+  height: 500px;
+  width: 500px;
+}
+
+.tables {
+  display: inline-block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
