Frontend updated (no conflict) (#83)
* Frontend project structure and navigation

* Added navbar and material UI

* Tables for stocks page

* Implemented Stocks container

* Did some weather things- found a weather api, hooked it up, added a view that isn't currently ingesting the API. Needs testing, couldn't get it running on lab machine.

* Forgot the API key

* Fully working stock search

* Added support for non-existing stocks

* Basic facebook auth

* Further work on stock graph

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #FAFAFA;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,6 +20,15 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.calendar {
+  height: 500px;
+  width: 500px;
+}
+
+.tables {
+  display: inline-block;
 }
 
 @keyframes App-logo-spin {
