--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,13 @@
   color: #61dafb;
 }
 
+.button-primary {
+  background-color: '#00A6DD';
+  color: 'white';
+  height: 50;
+  width: 150;
+}
+
 .calendar {
   height: 500px;
   width: 500px;
