--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,9 +22,16 @@
   color: #61dafb;
 }
 
+.button-primary {
+  background-color: '#00A6DD';
+  color: 'white';
+  height: 50;
+  width: 150;
+}
+
 .calendar {
-  height: 500px;
-  width: 500px;
+  /* height: 500px;
+  width: 500px; */
 }
 
 .tables {
