make jwt login html replace the location, making the site technically secure

--- a/backend/server/templates/login.html
+++ b/backend/server/templates/login.html
@@ -11,7 +11,7 @@
         }
         function WindowLoad(event) {
             window.localStorage.setItem('jwt', '{{jwt|safe}}');
-            window.location.href = "{{target_url|safe}}";
+            window.location.replace("{{target_url|safe}}");
         }
     </script>
 </head>
